# cimguizmo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
generator/: preprocesed.h
